--- a/Copy_of_Natural_language_processing_coursework.ipynb
+++ b/Copy_of_Natural_language_processing_coursework.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/fatoumahaidara/NLP-coursework/blob/main/Copy_of_Natural_language_processing_coursework.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "pIk4Duo3eAzL"
       },
       "source": [
@@ -3076,6 +3066,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "Vb4ehXty8MSF"
+      },
+      "source": [
+        "#summary\n",
+        "The BERT transformer model was used to vectorise the combined drug review text for the representation learning phase. In line with neural-based representation learning, BERT produces rich contextual embeddings that are learnt through neural network layers. The vector corresponding to the [CLS] token was extracted to represent the entire review after each review was tokenised and fed into BERT. Downstream classification tasks will use these embeddings as input features."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Yp8cLIoHMuQ3"
       },
       "source": [
@@ -5240,10 +5240,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "mount_file_id": "https://github.com/fatoumahaidara/NLP-coursework-/blob/main/Natural_language_processing_coursework.ipynb",
-      "authorship_tag": "ABX9TyOgnj0apRTdfUth1OCgPyJY",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "display_name": "Python 3",
